tests/errors/empty_arg_key.error
parse error at line 1 column 11 for CrLf:
command ""=value
          ^